sessao-09-10/lab-integrado/optional/networkpolicy/clientes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-allowed
  labels:
    access: symfony-demo
spec:
  containers:
    - name: client
      image: busybox:1.36
      command: ["sleep", "86400"]
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: client-blocked
  labels:
    access: blocked
spec:
  containers:
    - name: client
      image: busybox:1.36
      command: ["sleep", "86400"]
  restartPolicy: Never
