sessao-09-10/lab-integrado/optional/networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: symfony-demo-ingress
spec:
  podSelector:
    matchLabels:
      app: symfony-demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: symfony-demo
      ports:
        - protocol: TCP
          port: 80
